-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: None
-
Component/s: client-libs
-
b32
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8084329 | emb-9 | Philip Race | P3 | Resolved | Fixed | team |
| JDK-8063824 | 8u45 | Philip Race | P3 | Resolved | Fixed | b01 |
| JDK-8057616 | 8u40 | Philip Race | P3 | Resolved | Fixed | b06 |
| JDK-8070095 | emb-8u47 | Philip Race | P3 | Resolved | Fixed | team |
| JDK-8172633 | openjdk7u | Philip Race | P3 | Resolved | Fixed | master |
Earlier this year we upgraded to LittleCMS 2.5. However since then LittleCMS 2.6 shipped.
It includes some useful looking synchronisation work and also has bought back at least
one of our contributed fixes (8014497).
It includes some useful looking synchronisation work and also has bought back at least
one of our contributed fixes (8014497).
- backported by
-
JDK-8057616 Upgrade JDK to use LittleCMS 2.6
-
- Resolved
-
-
JDK-8063824 Upgrade JDK to use LittleCMS 2.6
-
- Resolved
-
-
JDK-8070095 Upgrade JDK to use LittleCMS 2.6
-
- Resolved
-
-
JDK-8084329 Upgrade JDK to use LittleCMS 2.6
-
- Resolved
-
-
JDK-8172633 Upgrade JDK to use LittleCMS 2.6
-
- Resolved
-
- relates to
-
JDK-8057934 Upgrade to LittleCMS 2.6 breaks AIX build
-
- Resolved
-
(1 relates to)