8056122: Upgrade JDK to use LittleCMS 2.6

Reviewed-by: bae, jgodinez